# SimpleHTTPServer

./: CMakeLists.txt  README.md  SHS.sln
SHS/: Buffer.cpp  Buffer.h  BufferedClientConnection.cpp  ClientConnection.cpp  Http.cpp  Http.h  HttpError.h  HttpServer.cpp  HttpServer.h  HttpUtils.cpp  HttpUtils.h  Main.cpp  SHS.vcxproj  SHS.vcxproj.filters  ServerSocket.cpp  Sockets.cpp  Sockets.h  StringUtils.h  html_utils.cpp  index.html  main.css  string_utils.cpp  string_utils.h
SHS/res/: index.html  main.css
res/: index.html
src/: Buffer.cpp  HttpServer.h  Main.cpp  StringUtils.cpp  StringUtils.h  main.cpp  string_utils.h
src/http/: Http.cpp  Http.h  HttpError.cpp  HttpError.h  HttpServer.cpp  HttpServer.h  HttpUtils.cpp  HttpUtils.h
